--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,11 @@ padding: 0px;
  @media (max-width:450px) {
       body{
          background: url(../img/Group\ 2.png);
+         background-position: center center;
+         background-repeat: no-repeat;
+         background-attachment: fixed;
+         background-size: cover;
+         height: 100%;
       }
    }
    @media (max-width:450px) {
